Fix XML parsing error and stabilize iBatis config loading
- JdbcUtil: read SQL map XML as bytes with BOM detection/removal
  to prevent "Content is not allowed in prolog" SAXParseException
  regardless of OS file.encoding or BOM presence
- search_customer_keyword_ajx.jsp: rewrite to emit clean XML with
  trimDirectiveWhitespaces, out.clearBuffer(), and robust null handling
- home.jsp: restore original menu logic with null-safe guards
- Restore corrupted gasmax_db_config XML files (were all null bytes)
- db_config.properties: fix path to current project
- geocode JSP: add TLS 1.2 system properties for HTTPS calls
- Dockerfile: minor deployment improvements

Co-authored-by: Cursor <cursoragent@cursor.com>